--- a/43_L5_E3_Update-Blog-layout/Solution/navigation.css
+++ b/43_L5_E3_Update-Blog-layout/Solution/navigation.css
@@ -1,6 +1,6 @@
 header nav ul {
     display:flex;
-    
+    margin:0;
 }
 
 header nav li {
@@ -27,32 +27,61 @@ header nav li a:hover{
     border-radius:0.3rem;
 }
 
-header nav li:not(:last-child) {
-    margin-right:1rem;
-}
 
-#toggle {
+
+#toggle ,
+#main-nav-toggle{
     display:none;
 }
 #toggle .fas {display:inline-block ;margin-right: 0.5rem;}
-#toggle .fas.fa-times {display:hidden}
+#toggle .fas.fa-times {display:none}
 
 @media screen and (max-width:800px){
+
+
+    nav.main {
+        display:none;
+    }
+
+    nav.main > ul {
+        display:block;
+    }
 
     #toggle {
         display:block;
     }
-    .fas fa-times{
-        display:hidden;
-    }
 
+    nav.main ul li:not(:last-child){
+        padding: 0 0 1rem 0;
     }
-    #header-nav-toggle:checked + header nav {
-        display:none;
-         }
-
-    #header-nav-toggle:checked + header nav ul li {
+    #main-nav-toggle:checked + header nav.main {
+        text-align: center;
+        border-top:1px solid black;
+        padding:1rem 0;
         display:block;
         flex:1 0 100%;
+    }
+    #main-nav-toggle:checked + header #toggle .fa-times {
+        display: inline-block;
+    }
+    
+    #main-nav-toggle:checked + header #toggle .fa-bars {
+        display: none;
+    }
+    
+
+}
+
+@media screen and (min-width:800px){
+    #toggle {
+        display: none;
+    }
+
+    header nav li:not(:last-child) {
+        margin-right:1rem;
+    }
+    
+    nav.main > ul > li:not(:last-child){
+        padding-right:0.7rem;
     }
 }
